[package]
name = "rust-lox"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fred Roth"]
description = "An interpreter for the Lox language (http://craftinginterpreters.com/)"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
miette = { version = "7.1.0", features = ["fancy", "syntect-highlighter"] }
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.57"
strum = { version = "0.26", features = ["derive"] }
rustyline = {version= "13.0.0", features = ["with-file-history", "derive"]}

[dev-dependencies]
anyhow = "1.0.80"
assert_matches = "1.5"
float_eq = "1.0.1"
