[package]
name = "rust-lox"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fred Roth"]
description = "An interpreter for the Lox language (http://craftinginterpreters.com/)"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env", "string"] }
miette = { version = "7.2.0", features = ["fancy", "syntect-highlighter"] }
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.58"
strum = { version = "0.26", features = ["derive"] }
rustyline = {version= "14.0.0", features = ["with-file-history", "derive"]}
directories = "5.0.1"
graphviz-rust = "0.9.0"
uuid = { version = "1.8.0", features = ["v4"]}

[dev-dependencies]
assert_matches = "1.5"
float_eq = "1.0.1"
datadriven = "0.8.0"
serde_json = "1.0"
